--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
                                     <picture>
                                         <source media="(max-width: 550px)"
                                             srcset="assets/pictures/card-terminal320.png">
-                                        <img class="card-terminal" src="assets/pictures/card-terminal.png"
+                                        <img class="card-terminal" src="assets/pictures/card-terminal.svg"
                                             alt="card terminal">
                                     </picture>
                                     <picture>
                                         <source media="(max-width: 550px)" srcset="assets/pictures/shadow320.png">
-                                        <img class="terminal-shadow" src="assets/pictures/shadow.png"
+                                        <img class="terminal-shadow" src="assets/pictures/shadow.svg"
                                             alt="shadow terminal">
                                     </picture>
                                     <picture>
                                         <source media="(max-width: 550px)" srcset="assets/pictures/one-money320.png">
-                                        <img class="one-money" src="assets/pictures/one-money.png" alt="money">
+                                        <img class="one-money" src="assets/pictures/one-money.svg" alt="money">
                                     </picture>
                                     <picture>
                                         <source media="(max-width: 550px)" srcset="assets/pictures/two-money320.png">
-                                        <img class="two-money" src="assets/pictures/two-money.png" alt="money">
+                                        <img class="two-money" src="assets/pictures/two-money.svg" alt="money">
                                     </picture>
                                 </picture>
                             </div>
@@ -303,10 +303,6 @@
                             </div>
                             <div class="privileges__item">
                                 <img class="privileges__picture" src="assets/pictures/Bonus.png" alt="bonus">
-                                <!-- <object class="privileges__picture" type="image/svg+xml"
-                                    data="assets/pictures/fireExtinguisher.svg">
-                                    <img src="assets/pictures/fireExtinguisher.webp">
-                                </object> -->
                                 <div class="privileges__text">
                                     <h2 class="privileges__title">Повторные покупки</h2>
                                     <div class="privileges__description">
