--- a/index.html
+++ b/index.html
@@ -71,43 +71,23 @@
                                             у партнеров бонусной программы</p>
                                     </div>
                                 </div>
-                                <picture>
-                                    <source media="(max-width: 425px)" srcset="assets/pictures/pay.webp"
-                                        type="image/webp">
+                                <div class="privileges__img">
                                     <img class="privileges__picture" src="assets/pictures/pay-test.svg" alt="paycard">
-                                    <picture>
-                                        <source media="(max-width: 550px)"
-                                            srcset="assets/pictures/card-terminal320.png">
-                                        <img class="card-terminal" src="assets/pictures/card-terminal.svg"
-                                            alt="card terminal">
-                                    </picture>
-                                    <picture>
-                                        <source media="(max-width: 550px)" srcset="assets/pictures/shadow320.png">
-                                        <img class="terminal-shadow" src="assets/pictures/shadow.svg"
-                                            alt="shadow terminal">
-                                    </picture>
-                                    <picture>
-                                        <source media="(max-width: 550px)" srcset="assets/pictures/one-money320.png">
-                                        <img class="one-money" src="assets/pictures/one-money.svg" alt="money">
-                                    </picture>
-                                    <picture>
-                                        <source media="(max-width: 550px)" srcset="assets/pictures/two-money320.png">
-                                        <img class="two-money" src="assets/pictures/two-money.svg" alt="money">
-                                    </picture>
-                                </picture>
+                                    <img class="card-terminal" src="assets/pictures/card-terminal.svg"
+                                        alt="card terminal">
+                                    <img class="terminal-shadow" src="assets/pictures/shadow.svg" alt="shadow terminal">
+                                    <img class="one-money" src="assets/pictures/one-money.svg" alt="money">
+                                    <img class="two-money" src="assets/pictures/two-money.svg" alt="money">
+                                </div>
                             </div>
                             <div class="privileges__item">
 
-                                <picture>
+                                <div class="privileges__img">
                                     <img class="privileges__picture" src="assets/pictures/bonus.svg"
-                                        alt="fireExtinguisher"> <!-- ?? picture ?? -->
-                                    <picture>
-                                        <img class="fire" src="assets/pictures/fire.svg" alt="fireExtinguisher">
-                                    </picture>
-                                    <picture>
-                                        <img class="fire-shadow" src="assets/pictures/fire-shadow.svg" alt="shadow">
-                                    </picture>
-                                </picture>
+                                        alt="fireExtinguisher">
+                                    <img class="fire" src="assets/pictures/fire.svg" alt="fireExtinguisher">
+                                    <img class="fire-shadow" src="assets/pictures/fire-shadow.svg" alt="shadow">
+                                </div>
                                 <div class="privileges__text">
                                     <h2 class="privileges__title">Бонусы не сгорают</h2>
                                     <div class="privileges__description">
