try to fix safari

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             <div class="privilege">
                 <div class="container">
                     <div class="privilege__wrapper">
-                        <div class="privilege__header stroke-3"><span class="stroke-none">ПРОЩЕ</span>ЧЕМ<br>ВЫ
+                        <div class="privilege__header"><span>ПРОЩЕ</span>ЧЕМ<br>ВЫ
                             ДУМАЕТЕ
                         </div>
                         <div class="privilege__title">
                             <h1 class="privilege__sub_title">ПОТОМУ ЧТО</h1>
-                            <p class="privilege__sup_title stroke-2">С картой:</p>
+                            <p class="privilege__sup_title">С картой:</p>
                         </div>
                         <div class="privileges">
                             <div class="privileges__item">
@@ -108,13 +108,15 @@
                                             в вашем телефоне</p>
                                     </div>
                                 </div>
-                                <img class="privileges__picture privileges__picture-right"
-                                    src="assets/pictures/Chat.png" alt="chat">
+                                <div class="privileges__img">
+                                    <img class="privileges__picture privileges__picture-right"
+                                        src="assets/pictures/chat.svg" alt="chat">
+                                </div>
                             </div>
                         </div>
                         <div class="privilege__ending">
                             <h2 class="privilege__text">Покупатели<br> сэкономили за год</h2>
-                            <p class="privilege__count"><span class="stroke-1">2 800 905</span> ₽</p>
+                            <p class="privilege__count"><span>2 800 905</span> ₽</p>
                         </div>
                     </div>
                 </div>
@@ -122,9 +124,8 @@
             <div class="promo">
                 <div class="container">
                     <div class="promo__wrapper">
-                        <div class="promo__text stroke-3">
-                            Всего<br class="hide"> за <span class="stroke-none">49 ₽<span class="stroke-2">49
-                                    ₽</span></span>
+                        <div class="promo__text">
+                            Всего<br class="hide"> за <span>49 ₽<span>49 ₽</span></span>
                             покупай то<br>
                             о чем другие
                             мечтают
