fix img in block privileges, change first draw page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="jquery-transit.js"></script>
     <script src="//cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript"></script>
 </head>
 
@@ -284,7 +284,10 @@
                                 <div class="privileges__img">
                                     <img class="privileges__picture basket-front" src="assets/pictures/basket-front.svg" alt="basket">
                                     <img class="privileges__picture basket-back" src="assets/pictures/basket-back.svg" alt="basket">
-                                    <img class="baket-bag-big" src="assets/pictures/bag-basket-big.svg" alt="basket bag">
+                                    <img class="basket-bag-big" src="assets/pictures/bag-basket-big.svg" alt="basket bag">
+                                    <img class="basket-bag-middle" src="assets/pictures/bag-basket-middle.svg" alt="basket bag">
+                                    <img class="basket-bag-middle middle-right" src="assets/pictures/bag-basket-middle-top.svg" alt="basket bag">
+                                    <img class="basket-bag-top" src="assets/pictures/bag-basket-small.svg" alt="basket bag">
                                 </div>
                                 <div class="privileges__text">
                                     <h2 class="privileges__title">Повторные покупки</h2>
@@ -304,16 +307,15 @@
 
                                     </div>
                                 </div>
-                                <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
-                                    data="assets/pictures/chat.svg">
-                                    <img src="assets/pictures/chat.webp">
-                                </object>
+                                <div class="privileges__img">
+                                    <img class="privileges__picture" src="assets/pictures/chat.svg" alt="chat">
+                                </div>
                             </div>
                         </div>
                         <div class="privilege__ending">
                             <h2 class="privilege__text">Бонусных карт<br>
                                 выдано</h2>
-                            <p class="privilege__count"><span class="stroke-3-white">20 000</span> шт.</p>
+                            <p class="privilege__count"><span>20 000</span> шт.</p>
                         </div>
                     </div>
                 </div>
@@ -321,16 +323,15 @@
             <div class="promo">
                 <div class="container">
                     <div class="promo__wrapper">
-                        <div class="promo__text stroke-3-white">
-
-                            <span class="stroke-2-white">
+                        <div class="promo__text">
+                            <span>
                                 “ПРОЩЕ”
-                                <span class="stroke-none">“ПРОЩЕ”</span>
+                                <span>“ПРОЩЕ”</span>
                             </span><br>
                             ПОДХОДИТ для<br>
-                            <span class="stroke-2-white">
+                            <span>
                                 любой
-                                <span class="stroke-none">любой</span>
+                                <span>любой</span>
                             </span> сферы<br>
                             бизнеса
                         </div>
