add marquee hide

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </header>
-            <div class="marquee">
+            <div class="marquee first">
                 <img class="marquee__img" src="assets/pictures/rollText.svg" alt="rolling text">
             </div>
             <div class="offer">
@@ -227,9 +227,8 @@
                     </div>
                 </div>
             </header>
-            <div class="marquee">
+            <div class="marquee second">
                 <img class="marquee__img" src="assets/pictures/rollTextDarken.svg" alt="rolling text">
-                <!-- <img class="marquee__img" src="assets/pictures/rollText.svg" alt="rolling text"> -->
             </div>
             <div class="offer">
                 <div class="container">
