testing anime.js

--- a/index.html
+++ b/index.html
@@ -422,10 +422,18 @@
                 </div>
             </div>
         </div>
-        <svg class="svg-slider" fill="black">
+        <svg class="svg-slider-right" fill="black">
             <rect fill="#333" />
             <defs>
-                <clipPath id="myPath">
+                <clipPath id="myPath-right">
+                    <rect />
+                </clipPath>
+            </defs>
+        </svg>
+        <svg class="svg-slider-left" fill="black">
+            <rect fill="#333" />
+            <defs>
+                <clipPath id="myPath-left">
                     <rect />
                 </clipPath>
             </defs>
@@ -433,6 +441,7 @@
     </div>
 
     <!-- <script src="js/main.js"></script> -->
+    <script src="anime.min.js"></script>
     <script src="test.js"></script>
 </body>
 
