testing anime js lib

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             </defs>
         </svg>
         <svg class="svg-slider-left" fill="black">
-            <rect fill="#333" />
+            <rect fill="#fff" />
             <defs>
                 <clipPath id="myPath-left">
                     <rect />
