--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="elastic">
-        <div class="white top">
+        <div class="white top active">
             <header class="header">
                 <div class="container">
                     <div class="header__wrapper">
