add basket animation

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="contacts__wrapper">
                         <div class="contacts__left">
                             <div class="contacts__information">
-                                <a  href="mailto:proshe@info.com" class="contacts__email">proshe@info.com</a>
+                                <a href="mailto:proshe@info.com" class="contacts__email">proshe@info.com</a>
                                 <div class="contacts__custumers">
                                     <h2 class="contacts__text">Для покупателей</h2>
                                     <a href="tel:+7 908 656 65 65" class="contacts__phone">+7 908 656 65 65</a>
@@ -274,19 +274,27 @@
                                     </div>
                                 </div>
                                 <div class="privileges__img">
-                                    <img class="privileges__picture magnet" src="assets/pictures/magnet.svg" alt="magnet">
+                                    <img class="privileges__picture magnet" src="assets/pictures/magnet.svg"
+                                        alt="magnet">
                                     <img class="smiles" src="assets/pictures/smiles.svg" alt="smiles">
-                                    <img class="smiles smiles-faster" src="assets/pictures/smiles-faster.svg" alt="smiles">
+                                    <img class="smiles smiles-faster" src="assets/pictures/smiles-faster.svg"
+                                        alt="smiles">
                                 </div>
                             </div>
                             <div class="privileges__item">
                                 <div class="privileges__img">
-                                    <img class="privileges__picture basket-front" src="assets/pictures/basket-front.svg" alt="basket">
-                                    <img class="privileges__picture basket-back" src="assets/pictures/basket-back.svg" alt="basket">
-                                    <img class="basket-bag-big" src="assets/pictures/bag-basket-big.svg" alt="basket bag">
-                                    <img class="basket-bag-middle" src="assets/pictures/bag-basket-middle.svg" alt="basket bag">
-                                    <img class="basket-bag-middle middle-right" src="assets/pictures/bag-basket-middle-top.svg" alt="basket bag">
-                                    <img class="basket-bag-top" src="assets/pictures/bag-basket-small.svg" alt="basket bag">
+                                    <img class="privileges__picture basket-front" src="assets/pictures/basket-front.svg"
+                                        alt="basket">
+                                    <img class="privileges__picture basket-back" src="assets/pictures/basket-back.svg"
+                                        alt="basket">
+                                    <img class="basket-bag-big" src="assets/pictures/bag-basket-big.svg"
+                                        alt="basket bag">
+                                    <img class="basket-bag-middle" src="assets/pictures/bag-basket-middle.svg"
+                                        alt="basket bag">
+                                    <img class="basket-bag-middle middle-right"
+                                        src="assets/pictures/bag-basket-middle-top.svg" alt="basket bag">
+                                    <img class="basket-bag-top" src="assets/pictures/bag-basket-small.svg"
+                                        alt="basket bag">
                                 </div>
                                 <div class="privileges__text">
                                     <h2 class="privileges__title">Повторные покупки</h2>
@@ -424,9 +432,27 @@
         </div>
         <svg class="svg-slider-right" fill="black">
             <rect fill="#333" />
+            <!-- <g>
+                <path
+                    d="M0.284737 171C0.284737 121.773 59.999 86.3636 59.999 0V342C59.999 262.545 0.284737 220.227 0.284737 171Z"
+                    fill="#333333" />
+                <line x1="18.9395" y1="170.459" x2="40.9803" y2="170.459" stroke="white" stroke-width="3" />
+                <line x1="18.9395" y1="161.275" x2="40.9803" y2="161.275" stroke="white" stroke-width="3" />
+                <line x1="18.9395" y1="179.643" x2="40.9803" y2="179.643" stroke="white" stroke-width="3" />
+                <circle cx="29.5" cy="171.5" r="21.5" stroke="#FFFCFC" stroke-width="2"  fill="transparent" />
+            </g> -->
             <defs>
                 <clipPath id="myPath-right">
                     <rect />
+                    <g>
+                        <path
+                            d="M0.284737 171C0.284737 121.773 59.999 86.3636 59.999 0V342C59.999 262.545 0.284737 220.227 0.284737 171Z"
+                            fill="#333333" />
+                        <line x1="18.9395" y1="170.459" x2="40.9803" y2="170.459" stroke="white" stroke-width="3" />
+                        <line x1="18.9395" y1="161.275" x2="40.9803" y2="161.275" stroke="white" stroke-width="3" />
+                        <line x1="18.9395" y1="179.643" x2="40.9803" y2="179.643" stroke="white" stroke-width="3" />
+                        <circle cx="29.5" cy="171.5" r="21.5" stroke="#FFFCFC" stroke-width="2"  fill="transparent" />
+                    </g>
                 </clipPath>
             </defs>
         </svg>
