animation basket fixing

--- a/index.html
+++ b/index.html
@@ -311,7 +311,6 @@
                                     <div class="privileges__description">
                                         <p>Клиенты с большей вероятностью будут заказывать дополнительные услуги за счет
                                             снижения суммы основной покупки</p>
-
                                     </div>
                                 </div>
                                 <div class="privileges__img">
@@ -388,10 +387,10 @@
                     <div class="contacts__wrapper">
                         <div class="contacts__left">
                             <div class="contacts__information">
-                                <div class="contacts__email">proshe@info.com</div>
+                                <a href="mailto:proshe@info.com" class="contacts__email">proshe@info.com</a>
                                 <div class="contacts__custumers">
                                     <h2 class="contacts__text">Для юридических лиц</h2>
-                                    <div class="contacts__phone">+7 908 656 65 65</div>
+                                    <a href="tel:+7 908 656 65 65" class="contacts__phone">+7 908 656 65 65</a>
                                 </div>
                             </div>
                         </div>
