--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                     </div>
                                 </div>
                                 <div class="privileges__img">
-                                    <img class="privileges__picture" src="assets/pictures/chat.svg" alt="chat">
+                                    <img class="privileges__picture" src="assets/pictures/check-svg.svg" alt="chat">
                                 </div>
                             </div>
                         </div>
@@ -431,7 +431,7 @@
         </div>
         <svg class="svg-slider-right" fill="black">
             <rect fill="#333" />
-            <!-- <g>
+            <g>
                 <path
                     d="M0.284737 171C0.284737 121.773 59.999 86.3636 59.999 0V342C59.999 262.545 0.284737 220.227 0.284737 171Z"
                     fill="#333333" />
@@ -439,7 +439,7 @@
                 <line x1="18.9395" y1="161.275" x2="40.9803" y2="161.275" stroke="white" stroke-width="3" />
                 <line x1="18.9395" y1="179.643" x2="40.9803" y2="179.643" stroke="white" stroke-width="3" />
                 <circle cx="29.5" cy="171.5" r="21.5" stroke="#FFFCFC" stroke-width="2"  fill="transparent" />
-            </g> -->
+            </g>
             <defs>
                 <clipPath id="myPath-right">
                     <rect />
